# weather

./: .gitignore  LICENSE  pyproject.toml
src/weather/: __main__.py  app.py  cache.py  cli.py  config.py  logging.py  models.py  onboarding.py
src/weather/providers/: __init__.py  base.py
src/weather/providers/aqi/: __init__.py  base.py  openmeteo.py
src/weather/providers/geocoding/: __init__.py  base.py  nominatim.py  openmeteo.py
src/weather/providers/geolocation/: __init__.py  base.py  freeipapi.py  ipinfo.py  ipwhois.py
src/weather/providers/weather/: __init__.py  base.py  openmeteo.py
src/weather/services/: __init__.py  aqi.py  geocoding.py  geolocation.py  weather.py
