[project]
name = "weather"
version = "0.1.0"
description = "A fast terminal weather client"
readme = "README.md"
license = "MIT"
authors = [{ name = "Harshit Pawar", email = "hpchess64@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.21.1",
    "platformdirs>=4.10.0",
    "rich>=15.0.0",
    "tomli-w>=1.2.0",
    "typer>=0.26.8",
]

[project.scripts]
weather = "weather.cli:app"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
skip-magic-trailing-comma = true
